@@ -95,6 +95,8 @@ public:
 		}
 
 	void paint_rle (int xoff, int yoff, unsigned char *in);
+					// Convert to 32-bit rgba.
+	unsigned char *rgba(unsigned char *pal, unsigned char transp);
 	};
 
 #endif
